# engram

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Engram.md  Features.md  README.md  claude-memory-service-spec-v2 (1).md  pyproject.toml
docs/phases/: phase-0-bootstrap.md  phase-1-storage.md  phase-2-certificates.md  phase-3-compute.md  phase-4-api.md  phase-5-mcp-server.md  phase-6-automation.md  phase-7-postcompact-hook.md
hooks/: compact-reminder.sh  post-compact-memory.sh  prompt-context-engram.sh  recall-confidence-check.sh  session-start-engram.sh  setup-certs.sh  store-hygiene-gate.sh
mcp_server/: __init__.py  api_client.py  cert_loader.py  server.py  tools.py
rules/: memory.md
scripts/: backup_vectors.py  bulk_delete.py  export_client_cert.py  migrate_to_flat_keys.py  restore_from_backup.py  setup-certs.sh  smoke_test.py
skills/hygiene/: SKILL.md
src/cert_rotator/: handler.py
src/cost_reporter/: __init__.py  handler.py
src/memory_handler/: config.py  delete.py  embeddings.py  handler.py  models.py  prune.py  recall.py  search_related.py  store.py  summarize.py  vectors.py
terraform/: backend.hcl.example  locals.tf  main.tf  outputs.tf  providers.tf  tfplan  variables.tf
terraform/bootstrap/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/api/: main.tf  outputs.tf  variables.tf
terraform/modules/certificates/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  (+2 more)
tests/: conftest.py
tests/integration/: test_api_mtls.py
tests/mcp/: test_tools.py
tests/unit/: test_cert_rotator.py  test_embeddings.py  test_handler.py  test_models.py  test_recall.py  test_store.py  test_summarize.py  test_vectors.py
(+6 files in other folders)
