[project]
name = "engram"
version = "0.1.0"
description = "Serverless memory service for Claude -- Lambda handlers and MCP server"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Brad Duhon", email = "brad.duhon@gmail.com" },
]

[project.optional-dependencies]
lambda = [
    "pydantic>=2.0,<3.0",
]
mcp-server = [
    "mcp>=1.0",
    "httpx>=0.27",
    "boto3>=1.35",
    "pydantic>=2.0,<3.0",
    "cryptography>=43.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "moto[s3]>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "boto3-stubs[s3,secretsmanager,bedrock-runtime]>=1.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires deployed AWS infrastructure (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "S101",  # assert is used for invariant checks, not tests-only
]

[tool.ruff.lint.isort]
known-first-party = ["memory_handler", "cert_rotator", "mcp_server"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = ["moto.*", "mcp.*"]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
